--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     }
   ],
   "dependencies": {
-    "graylog2": "^0.1.3",
+    "graylog2": "git://github.com/bubblegroup/node-graylog2#master",
     "lodash": "^3.1.0",
     "winston": "^1.0.0"
   },
